<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volt_runner</name>
  <version>0.0.0</version>
  <description>VoltRunner ROS2 Package</description>
  <maintainer email="lim@todo.todo">lim</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>volt_runner_description</exec_depend>
  <exec_depend>volt_runner_gazebo</exec_depend>
  <exec_depend>volt_runner_navigation</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
